[package]
name = "xaccel-backend-mock"
version = "0.9.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
hmac = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.37", features = ["io-util", "macros", "net", "rt-multi-thread"] }
