[package]
name = "xaccel-client-probe"
version = "0.21.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["macros", "net", "rt-multi-thread", "time"] }
