[package]
name = "xaccel-control-api"
version = "0.38.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
aes-gcm = "0.10"
anyhow = "1.0"
axum = "0.7"
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
hmac = "0.12"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "mysql", "macros"] }
tokio = { version = "1.37", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
